======================
    FIXED: All files / Custom files. Executable was removed.
    FIXED: when selecting something from the combobox in "mark files" dialog, combo doesn't close immediatly
    FIXED: mark files dialog added the same selection more than once
    FIXED: disabled panel-types in konfigurator
    FIXED: font size problems with the Select dialog, and New Net Connection
    FIXED: mountman detects those devices as supermount, which are mounted and missing from fstab
    FIXED: mountman inserts '/dev/' before NFS shares and mounted devices which are missing from fstab
    FIXED: mountman does not watch readonly directories (mount can change its permissions!)
    FIXED: mountman does not stop dirwatch after close + memory leak
    FIXED: compare fix at directories with escape characters
    FIXED: Sorry - Archive test passed
    FIXED: FTP proxy bug (more than one @ characters in the URL)
    REMOVED: SortByExtention menu item (which did nothing)
    REMOVED: KrSearch-Help + Pack-Move into archive (did nothing)
    UPDATED: Dutch translation

1.29-beta
======================
    ADDED: KrSearch Match whole word only feature
    ADDED: Tab-browsing shortens tabs when more tabs are created
    ADDED: Starting Krusader with root privileges by pressing Alt+K
    ADDED: Open-in-a-new-tab available in right-click menu
    ADDED: Creating new files with SHIFT+F4
    ADDED: Russian translation (thanks to Dmitry Chernyak)
    ADDED: Ctrl+Enter and Ctrl+Shift+Enter keyboard shortcuts
    ADDED: default shortcut for refreshing the panel is Ctrl+R
    ADDED: ctrl-left/right arrow checks if we're on a folder, if so it refreshes the other panel with the contents
           of the folder, otherwise to the same path as current one (Wincmd style)
    ADDED: tabbed-browsing beta
    ADDED: SHIFT-F3 view dialog.
    ADDED: The internal viewer follow links on HTML pages.
    ADDED: panel swapping by Ctrl+U