@@ -1,4 +1,5 @@
 ======================
+    FIXED: mountman FreeBSD bug (/etc/mtab does not exist in FreeBSD)
     FIXED: All files / Custom files. Executable was removed.
     FIXED: when selecting something from the combobox in "mark files" dialog, combo doesn't close immediatly
     FIXED: mark files dialog added the same selection more than once
